# Sockets

SocketClient/: CMakeLists.txt  main.c
SocketServer/: CMakeLists.txt  main.c
SocketUtil/: CMakeLists.txt  socketUtil.c  socketUtil.h
